2014-08-27 Added "Calculate in real time" property to Error Counter module
2014-08-27 Added new module: Lesson Score Counter
2014-08-27 Added new module: Page Score Counter
2014-08-27 Added new module: Lesson Error Count
2014-08-26 Added "Initial image" property to Animated Page Progress module
2014-08-26 Fixed isAttempted command visibility in Text module in not activity mode
2014-08-26 Added new module: Completion Progress
2014-08-26 Added new module: Animated Lesson Progress
2014-08-26 Added permutations (safari,ie9,gecko1_8,opera)
2014-08-26 Added isVisited() method to icPlayer API
2014-08-26 New gap type in Text module - filled gap
2014-08-26 Added libraries ydp and CreateJS
2014-08-25 Fixed bug with SlideShow plays when page is closed
2014-08-22 Fixed blocking options in ShowAnswers mode and clearing styles on HideAnswers event in True/False module
2014-08-22 Fixed handling HideAnswers event in Choice module
2014-08-22 Fixed triggering work mode in modules from Check Answers module when ShowAnswers event is fired
2014-08-22 Added responding to Show Answers events in Check module
2014-08-22 Added parsing item markups from Source List to Multiple Gap module
2014-08-21 Added new colors to IWB Toolbar
2014-08-21 Fixed video module not seeking to start after video eneded
2014-08-21 Added new method open(module_ID, input_index) to eKeyboard module
2014-08-21 Renamed Interactive Table to IWB Toolbar
2014-08-21 Added Gap max length property in Text module
2014-08-20 Added responding to Show Answers events in Text module
2014-08-20 Added Styles property to Navigation Bar module
2014-08-20 Added Random order property to Choice module
2014-08-20 Added new languages layouts to eKeyboard module
2014-08-20 Added API method getView to Table module
2014-08-19 Fixed drawing stand area nad hide area, some styling changes, new icons in Interactive Table
2014-08-18 Fixed drawing on mobile devices in Interactive Table module