@@ -1,19 +1,19 @@
 <div class="page-score-counter-wrapper">
     <div class="fraction hidden">
         <div class="score">
-            0
+            6
         </div>
         <div class="separator">
             /
         </div>
         <div class="max-score">
-            0
+            13
         </div>
     </div>
     <div class="score hidden">
-        0
+        6
     </div>
     <div class="max-score hidden">
-        0
+        13
     </div>
 </div>
