@@ -1,5 +1,5 @@
-.page-score-counter-wrapper {
-
+.addon_Page_Score_Counter {
+    color: green;
 }
 
 .page-score-counter-wrapper > div.hidden {
@@ -7,15 +7,7 @@
 }
 
 .page-score-counter-wrapper > div {
-    border: 1px solid #002266;
-    border-radius: 4px;
-    background-color: #fafafa;
-    box-shadow: 1px 1px 1px #005599;
-    width: 50px;
-    height: 50px;
     text-align: center;
-    line-height: 50px;
-    font-size: 12px;
 }
 
 .page-score-counter-wrapper .fraction > div {
