@@ -1,19 +1,15 @@
 <div class="page-score-counter-wrapper">
     <div class="fraction hidden">
         <div class="score">
-            0
         </div>
         <div class="separator">
             /
         </div>
         <div class="max-score">
-            0
         </div>
     </div>
     <div class="score hidden">
-        0
     </div>
     <div class="max-score hidden">
-        0
     </div>
 </div>
